--- a/public/styles.css
+++ b/public/styles.css
@@ -63,3 +63,18 @@ header {
     width: 100%;
     transition: width 500ms ease-in-out;
 }
+
+/* CARD */
+
+.card{
+    background-color: white;
+    width: 800px;
+    height: 400px;
+    margin: 45px auto;
+    
+    /* grade(dividido a div ao meio)s */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+    box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.1);
+}
