Detalhes instrutor adicionados

--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -2,9 +2,48 @@
 
 {% block content %}
 
-<div class="card">
-    <section class="avatar" style="background: url(https://source.unsplash.com/collection/9374406/500x500) no-repeat center center / cover"></section>
+    <div class="card">
+        <section class="avatar" style="background: url(https://source.unsplash.com/collection/9374406/500x500) no-repeat center center / cover"></section>
+        <section class="details">
 
-</div>
+            <h3 class="">
+                Detalhes
+            </h3>
+
+            <div class="item">
+                <div class="">Instrutor</div>
+                <div class="">Guilherme Saraiva</div>
+            </div>
+
+            <div class="item">
+                <div class="">Idade</div>
+                <div class="">29</div>
+            </div>
+
+            <div class="item">
+                <div class="">Sexo</div>
+                <div class="">Masculino</div>
+            </div>
+
+            <div class="item">
+                <div class="">Acompanhamento</div>
+                <div class="">
+                    <span class="">
+                        Musculação
+                    </span>
+
+                    <span class="">
+                        Crossfit
+                    </span>
+
+                    <div class="item">
+                        <div class="">Desde</div>
+                        <div class="">02/02/2020</div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </div>
 
 {% endblock content %}
