--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@
 
 :root{
     --primary-color: #7259c1;
+    --secondary-color: #F7DF1E;
 }
 * {
     margin: 0;
@@ -69,7 +70,7 @@ header {
 .card{
     background-color: white;
     width: 800px;
-    height: 400px;
+    min-height: 400px;
     margin: 45px auto;
     
     /* grade(dividido a div ao meio)s */
@@ -77,4 +78,79 @@ header {
     grid-template-columns: 1fr 1fr;
     
     box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.1);
+ 
+    animation-name: up 200ms  ease-out;
+    /* animation-duration: 200ms;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-out;
+    animation-delay: 1s; */
+    /* animation-play-state: running; */
+    /* animation-direction: reverse; */
+    /* animation-iteration-count: infinite; */
+}
+
+/* animation */
+@keyframes up{
+
+    0%{
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+/* details */
+
+.details{
+    padding: 32px;
+}
+
+.details .item{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 16px 0;
+}
+
+.details .item:last-child{
+    border: none;
+
+}
+
+.details h3,
+.details .item div:nth-child(1){
+    font-size: 14px;
+    line-height: 24px;
+    color: #777;
+    letter-spacing: 0.7px;
+    font-weight: normal;
+}
+
+.details .item div:nth-child(2){
+    color: #555;
+    font-weight: bold;
+    font-size: 18px;
+
+    /* Entra dentro da div item e pega a primeira div */
+}
+
+.details h3{
+    text-transform: uppercase;
+    font-weight: bold;
+    color: var(--primary-color)
+}
+
+.details .item span{
+    padding: 8px 16px;
+    background-color: var(--secondary-color);
+    border-radius: 16px;
+    color: #777;
+    margin-right: 4px;
+    margin-top: 8px;
+    display: inline-block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+    cursor: pointer;
+
 }
