Adicionando formulario de 'adicionar instrutor'

--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -37,7 +37,7 @@
                     </span>
 
                     <div class="item">
-                        <div class="">Desde</div>
+                        <div class="">Cadastrador desde:</div>
                         <div class="">02/02/2020</div>
                     </div>
 
