--- a/views/instructors/show.njk
+++ b/views/instructors/show.njk
@@ -17,7 +17,7 @@
 
             <div class="item">
                 <div class="">Idade</div>
-                <div class="">{{ instructor.birth}}</div>
+                <div class="">{{ instructor.age }}</div>
             </div>
 
             <div class="item">
