--- a/public/styles.css
+++ b/public/styles.css
@@ -175,7 +175,8 @@ input::placeholder{
     font-weight: normal;
 }
 
-button[type = "submit"]{
+button[type = "submit"],
+a.button{
     padding: 8px 32px;
     background-color: var(--primary-color);
     border-radius: 4px;
@@ -185,4 +186,11 @@ button[type = "submit"]{
     font-size: 16px;
     cursor: pointer;
 
+}
+
+a.button{
+    display: block;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
 }
