--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -6,11 +6,12 @@
         <section class="avatar" style="background: url(https://source.unsplash.com/collection/9374406/500x500) no-repeat center center / cover"></section>
         <section class="details">
 
-            <h3 class=""> Editar Instrutor </h3>
+            <h3 class="">
+                Novo Instrutor
+            </h3>
 
-            {% include 'instructors/fields.njk' %}
-
-            
+            {% include 'instructors/field.njk' %}
+           
         </section>
     </form>
 
