--- a/views/instructors/field.njk
+++ b/views/instructors/field.njk
@@ -1,7 +1,7 @@
  <div class="item">
                 <div class="">Avatar URL</div>
                 <div class="">
-                    <input type="text" name="avatar_url" placeholder="http://">
+                    <input type="text" name="avatar_url" placeholder="http://" value = "{{ instructor.avatar_url }}">
                 </div>
             </div>
 
