--- a/views/instructors/field.njk
+++ b/views/instructors/field.njk
@@ -8,25 +8,36 @@
             <div class="item">
                 <div class="">Instrutor</div>
                 <div class="">
-                    <input type="text" name="name" placeholder="Nome do Instrutor">
+                    <input type="text" name="name" placeholder="Nome do Instrutor" value ="{{ instructor.name}}">
                 </div>
             </div>
 
             <div class="item">
                 <div class="">Data de nascimento</div>
-                <div class=""><input type="date" name="birth"></div>
+                <div class=""><input type="date" name="birth" value = "{{ instructor.birth}}"></div>
             </div>
 
             <div class="item">
                 <div class="">Sexo</div>
-                    <span class=""><input type="radio" name="gender" value="M">Masculino</span>
-                    <span class=""><input type="radio" name="gender" value="F">Feminino</span>
+                    <span class="">
+                    <input type="radio"
+                           name="gender" 
+                           value="M" 
+                           {% if instructor.gender == 'M' %}
+                           checked
+                          {% endif %}>Masculino</span>
+                    <span class="">
+                    <input type="radio"
+                    name="gender"
+                    value="F" {% if instructor.gender == 'F' %}
+                    checked
+                    {% endif %}>Feminino</span>
             </div>
 
 
             <div class="item">
                 <div class=""> Área de atuação</div>
-                <div class=""><input type="text" name="services" placeholder="Separa os serviços prestados por vírgula"></div>
+                <div class=""><input type="text" name="services" value="{{instructor.services}}" placeholder="Separa os serviços prestados por vírgula"></div>
             </div>
 
            
