--- a/views/instructors/show.njk
+++ b/views/instructors/show.njk
@@ -47,7 +47,7 @@
             </div>
 
 
-        <a href="#" class="button">Editar</a>
+        <a href="/instructors/{{ instructor.id }}/edit" class="button">Editar</a>
         </section>
     </div>
 
